# Qt-TreeSitterHighlighter

./: .gitmodules  404.html  CMakeLists.txt  README.md  doxide.yaml  index.html  mkdocs.yaml
Tutorial/: index.html
docs/: Tutorial.md  index.md
examples/: main.cpp
reference/: index.html
reference/TreeSitterHighlighter/: index.html
search/: search_index.json
src/: TreeSitterHighlighter.cpp
stylesheets/: colors.css
